# agent

./: .gitignore  AGENTS.md  README.md
extensions/: answer.ts  block-large-images.ts  review.ts  todos.ts  usage-bar.ts
extensions/image-secondary-model/: README.md  index.ts
extensions/toolwatch/: package.json
ignore-extensions/: vp-update-instruction.ts
ignore-extensions/image-secondary-model/: index.ts
ignore-extensions/toolwatch/: config.json
ignore-skills/pb-video-analysis/: SKILL.md
prompts/: canvas-screenshot-setup.md
skills/canvas-screenshot/: SKILL.md
skills/canvas-screenshot/scripts/: canvas-screenshot.ts
skills/cli-preferences/: SKILL.md
skills/context7/: README.md
skills/inspect-image/: README.md  SKILL.md  api.js  inspect-image  main.js  package.json
skills/pb-video-analysis/: SKILL.md
skills/python/: README.md  SKILL.md  main.py  pyproject.toml
skills/rodney/: SKILL.md
skills/tufte/: SKILL.md
skills/web-browser/: SKILL.md
skills/web-browser/scripts/: start-profile-1.js
